--- a/her-birthday-main/index.html
+++ b/her-birthday-main/index.html
@@ -30,13 +30,13 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey you 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May God bless you 🍀</span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Just saying... you're pretty awesome ❤️</span><br>
-                    <span class="say">Sending good vibes and maybe a wink 😏</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    <span class="say">He mazya kadun chotasa gift 💞</span><br>
+                    <span class="say">Happy Birthday Bala 🎈</span><br>
+                    <span class="say">May Swami bless you 🍀</span><br>
+                    <span class="say">You are the most important person of life bachaa 💕</span><br>
+                    <span class="say">Ani tuzi jaga mazya manat kayam tashich rahil ❤️</span><br>
+                    <span class="say">I love you soo much rasgullya 🫀💋</span><br>
+                    <span class="say">Once again happy birthday ❤️😘</span><br>
                 </div>
             </div>
             <div id="clock-box">
@@ -180,4 +180,5 @@
     })();
     </script>
 </body>
+
 </html>
